# Story_collecting_agent

./: .env  README.md  classifier_learning.db  debug.py  main.py  pyproject.toml  test.py  test_economics_usa.xlsx  us_freedom_stories.xlsx  us_freedom_stories_additional.xlsx
